# nim-nodes

./: README.md  pyproject.toml
.github/workflows/: publishing.yml
example_workflows/: FLUX_Canny_NIM_Workflow.json  FLUX_Depth_Workflow.json  FLUX_Dev_NIM_Workflow.json  FLUX_Kontext NIM_Workflow.json
