[project]
name = "nimnodes"
version = "0.1.0"
description = "Provides nodes to utilise NVIDIA NIM, a set of accelerated inference microservices that allow you to run AI models on NVIDIA GPUs anywhere."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3", "ruff>=0.8.2"]
license = { file = "LICENSE" }


[project.urls]
Repository = "https://github.com/hanzoui/nim-nodes"

#  Used by Comfy Registry https://registry.hanzo.ai
[tool.comfy]
PublisherId = "comfyorg"
DisplayName = "NIM-Nodes"
Icon = ""

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
